--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,7 +21,7 @@ install:
   # We need wheel installed to build wheels
   - "%PYTHON%\\python.exe -m pip install wheel"
   - "%PYTHON%\\python.exe -m pip install -r requirements.txt"
-  - "set PATH=%PATH%;C:\"%PYTHON%\Scripts"
+  - "set PATH=%PATH%;C:\"%PYTHON%\\Scripts"
 
 build: off
 
