--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,10 +11,13 @@ environment:
       MINICONDA: "C:\\Miniconda"
       DISTUTILS_USE_SDK: "1"
     - PYTHON: "C:\\Python34-x64"
+      MINICONDA: "C:\\Miniconda"
       DISTUTILS_USE_SDK: "1"
     - PYTHON: "C:\\Python35-x64"
+      MINICONDA: "C:\\Miniconda"
       DISTUTILS_USE_SDK: "1"
     - PYTHON: "C:\\Python36-x64"
+      MINICONDA: "C:\\Miniconda"
       DISTUTILS_USE_SDK: "1"
 
 install:
