--- a/appveyor.yml
+++ b/appveyor.yml
@@ -39,16 +39,16 @@ test_script:
   # to put the Python version you want to use on PATH.
   - "python setup.py test"
 
-after_test:
+#after_test:
   # This step builds your wheels.
   # Again, you only need build.cmd if you're building C extensions for
   # 64-bit Python 3.3/3.4. And you need to use %PYTHON% to get the correct
   # interpreter
-  - "python setup.py bdist_wheel"
+  #- "python setup.py bdist_wheel"
 
-artifacts:
+#artifacts:
   # bdist_wheel puts your built wheel in the dist directory
-  - path: dist\*
+  #- path: dist\*
 
 #on_success:
 #  You can use this step to upload your artifacts to a public website.
