--- a/appveyor.yml
+++ b/appveyor.yml
@@ -46,9 +46,9 @@ test_script:
   # interpreter
   #- "python setup.py bdist_wheel"
 
-#artifacts:
+artifacts:
   # bdist_wheel puts your built wheel in the dist directory
-  #- path: dist\*
+  - path: dist\*
 
 #on_success:
 #  You can use this step to upload your artifacts to a public website.
