--- a/appveyor.yml
+++ b/appveyor.yml
@@ -39,12 +39,12 @@ test_script:
   # to put the Python version you want to use on PATH.
   - "python setup.py test"
 
-#after_test:
+after_test:
   # This step builds your wheels.
   # Again, you only need build.cmd if you're building C extensions for
   # 64-bit Python 3.3/3.4. And you need to use %PYTHON% to get the correct
   # interpreter
-  #- "python setup.py bdist_wheel"
+  - "python setup.py bdist_wheel"
 
 artifacts:
   # bdist_wheel puts your built wheel in the dist directory
