--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,19 @@
 language: python
+os:
+  - linux
+  - osx
 python:
-- '2.7'
-- '3.5'
-- 3.5-dev
-- '3.6'
-- 3.6-dev
-- 3.7-dev
+  - '2.7'
+  - '3.5'
+  - 3.5-dev
+  - '3.6'
+  - 3.6-dev
+  - 3.7-dev
 install:
-- pip install -r requirements.txt
+  - pip install -r requirements.txt
 script:
-- coverage run --source=pylj setup.py test
-- coveralls
+  - coverage run --source=pylj setup.py test
+  - coveralls
 deploy:
   provider: pypi
   user: arm61
