--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,6 @@
 environment:
-
+  password:
+    secure: 65W0nlxk4YHmU5dqtk5DXg==
   matrix:
 
     # For Python versions available on Appveyor, see
@@ -40,7 +41,10 @@ after_test:
   # Again, you only need build.cmd if you're building C extensions for
   # 64-bit Python 3.3/3.4. And you need to use %PYTHON% to get the correct
   # interpreter
-  - "%PYTHON%\\python.exe setup.py bdist_wheel"
+  - "echo [pypi] > %USERPROFILE%\\.pypirc"
+  - "echo username: user >> %USERPROFILE%\\.pypirc"
+  - "echo password: %password% >> %USERPROFILE%\\.pypirc"
+  - "%PYTHON%\\python.exe setup.py bdist_wheel upload"
 
 artifacts:
   # bdist_wheel puts your built wheel in the dist directory
