--- a/.travis.yml
+++ b/.travis.yml
@@ -50,9 +50,7 @@ after_success:
   - echo "password=$PYPIPASSWORD"                      >> ~/.pypirc
   - >
     if [ "$TRAVIS_OS_NAME" == "osx" ]; then
-      pip install --user twine;
-      python setup.py sdist bdist_wheel;
-      twine upload --skip-existing dist/*;
+      python setup.py sdist bdist_wheel upload;
     else
       echo "Not deploying as not running on OS X";
     fi
