--- a/appveyor.yml
+++ b/appveyor.yml
@@ -46,7 +46,7 @@ after_test:
   - "echo password: %password% >> %USERPROFILE%\\.pypirc"
   - "%PYTHON%\\python.exe -m pip install twine"
   - "%PYTHON%\\python.exe setup.py bdist_wheel"
-  - "twine upload --skip-existing dist/*.whl"
+  - "%PYTHON%\\python.exe twine upload --skip-existing dist/*.whl"
 
 artifacts:
   # bdist_wheel puts your built wheel in the dist directory
