--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,12 @@ os:
   -linux
   -osx
 python:
-  - 2.7
-  - 3.5
-  - 3.5-dev
-  - 3.6
-  - 3.6-dev
-  - 3.7-dev
+  - '2.7'
+  - '3.5'
+  - '3.5-dev'
+  - '3.6'
+  - '3.6-dev'
+  - '3.7-dev'
 install:
   - pip install -r requirements.txt
 script:
