--- a/appveyor.yml
+++ b/appveyor.yml
@@ -36,7 +36,7 @@ test_script:
   # to put the Python version you want to use on PATH.
   - "%PYTHON%\\python.exe setup.py test"
 
-deplot_script:
+deploy_script:
   # This step builds your wheels.
   # Again, you only need build.cmd if you're building C extensions for
   # 64-bit Python 3.3/3.4. And you need to use %PYTHON% to get the correct
