--- a/appveyor.yml
+++ b/appveyor.yml
@@ -47,7 +47,7 @@ deploy_script:
   - "cat %USERPROFILE%\\.pypirc"
   - "%PYTHON%\\python.exe -m pip install twine"
   - "%PYTHON%\\python.exe setup.py bdist_wheel"
-  - ps: If ($env:APPVEYOR_REPO_BRANCH -eq "master") {Invoke-Expression ""%PYTHON%\\Scripts\\twine upload --skip-existing dist/*.whl" 2>$null }
+  - ps: If ($env:APPVEYOR_REPO_BRANCH -eq "master") {Invoke-Expression "%PYTHON%\\Scripts\\twine upload --skip-existing dist/*.whl" 2>$null }
 
 artifacts:
   # bdist_wheel puts your built wheel in the dist directory
